update routing for Apache

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>The Portland Pour</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="alternate" type="application/rss+xml" href="https://blog.theportlandpour.com/rss" />
     <noscript id="jss-insertion-point"></noscript>
   </head>
   <body>
