add meta tags and canonical links

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="An art and cocktail blog celebrating the local spirits and ingredients of Portland and the Pacific Northwest. Local, tasty, fun.">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/tpp.favicon.16x16.png" sizes="16x16">  
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/tpp.favicon.16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/tpp.favicon.32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/images/tpp.favicon.96x96.png" sizes="96x96">
     <!--
