OG tags on home view

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="The Portland Pour">
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="An art and cocktail blog celebrating the local spirits and ingredients of Portland and the Pacific Northwest. Local, tasty, fun.">
+    <meta property="og:locale" content="en_US">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
