pinterest meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="The Portland Pour">
     <meta name="theme-color" content="#000000">
     <meta property="og:locale" content="en_US">
+    <meta name="p:domain_verify" content="9e442089f0ad9d6d820b76f113f597ee"/>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
