Scroll and static files in server

--- a/public_www/app.html
+++ b/public_www/app.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Javascript required.
     </noscript>
     <div id="root"></div>
     <!--
