--- a/public_www/app.html
+++ b/public_www/app.html
@@ -45,5 +45,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+    <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"2b5f5ea27c2aeb60c18ebca53","lid":"d633c0fa8c","uniqueMethods":true}) })</script>
   </body>
 </html>
