structured data updates

--- a/public_www/app.html
+++ b/public_www/app.html
@@ -28,6 +28,21 @@
     <link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="alternate" type="application/rss+xml" href="https://blog.theportlandpour.com/rss" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://www.theportlandpour.com/",
+        "sameAs": [
+          "http://www.instagram.com/theportlandpour",
+          "http://pinterest.com/theportlandpour",
+          "https://twitter.com/PortlandPour"
+        ],
+        "@id": "https://www.theportlandpour.com/#organization",
+        "name": "The Portland Pour",
+        "logo":"https://www.theportlandpour.com/assets/images/brand/tpp.brand.md.png"
+      }
+    </script>
     <noscript id="jss-insertion-point"></noscript>
   </head>
   <body>
