--- a/index.html
+++ b/index.html
@@ -8,11 +8,35 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="assets/css/main.css">
+
     <title>Sponsor The Portland Pour</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <nav class="navbar navbar-dark">
+      <div class="container">
+        <div class="col">
+          <img src="assets/images/tpp.logo.bw.png" alt="The Portland Pour logo">
+          <h3 class="tagline">
+            <small class="text-muted">sponsorship program</small>
+          </h3>
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-md align-self-end cta">
+            <h1 class="display-4">Working together</h1>
+            <p class="lead">Promoting local brands to thirsty people in Portland.</p>
+            <button type="button" class="btn btn-light">Become a sponsor</button>
+          </div>
+          <div class="col-md">
+            <img class="hero" src="assets/images/bg.hero.png" alt="hero image">
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
