css and responsive

--- a/index.html
+++ b/index.html
@@ -15,24 +15,28 @@
   <body>
     <nav class="navbar navbar-dark">
       <div class="container">
-        <div class="col">
-          <img src="assets/images/tpp.logo.bw.png" alt="The Portland Pour logo">
-          <h3 class="tagline">
-            <small class="text-muted">sponsorship program</small>
-          </h3>
+        <div class="row align-items-center">
+          <div class="col-md">
+            <img src="assets/images/tpp.logo.bw.png" alt="The Portland Pour logo">
+          </div>
+          <div class="col-md">
+            <h3 class="tagline">
+              <small class="text-muted">sponsorship program</small>
+            </h3>
+          </div>
         </div>
       </div>
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
-          <div class="col-md align-self-end cta">
+          <div class="col-lg order-lg-2">
+            <img class="hero" src="assets/images/bg.hero.png" alt="hero image">
+          </div>
+          <div class="col-lg order-lg-1 align-self-end cta">
             <h1 class="display-4">Working together</h1>
             <p class="lead">Promoting local brands to thirsty people in Portland.</p>
-            <button type="button" class="btn btn-light">Become a sponsor</button>
-          </div>
-          <div class="col-md">
-            <img class="hero" src="assets/images/bg.hero.png" alt="hero image">
+            <button type="button" class="btn btn-danger">Become a sponsor</button>
           </div>
         </div>
       </div>
