Content and layout updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
 
     <title>Sponsor The Portland Pour</title>
@@ -27,17 +28,257 @@
         </div>
       </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid jumbotron-hero">
       <div class="container">
         <div class="row">
           <div class="col-lg order-lg-2">
-            <img class="hero" src="assets/images/bg.hero.png" alt="hero image">
+            <img class="imggray imgres" src="assets/images/bg.hero.png" alt="hero image">
           </div>
           <div class="col-lg order-lg-1 align-self-end cta">
             <h1 class="display-4">Working together</h1>
-            <p class="lead">Promoting local brands to thirsty people in Portland.</p>
-            <button type="button" class="btn btn-danger">Become a sponsor</button>
+            <p class="lead">Promoting local brands to thirsty people</p>
+            <a href="#join">
+              <button type="button" class="btn btn-danger">Become a sponsor</button>
+            </a>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row justify-content-center mt-5">
+        <div class="col-auto">
+          <h2 class="text-center mt-5">A community platform</h2>
+          <p class="lead text-center">From grain to bottle, and garden to glass</p>
+          <p class="text-center">Supporting the creators, distillers, producers, and mixers in Portland and the Pacific Northwest.</p>
+          <p class="text-center">News, features, profiles, interviews, art, and recipes that can be made at home with local products</p>
+        </div>
+      </div>
+      <div class="row  justify-content-center my-5">
+        <div class="col-auto">
+          <img class="imgres" src="assets/images/screenshots.png" alt="screenshots on all devices">
+        </div>
+      </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 align-self-center text-center">
+            <h1 class="display-4">Commitment</h1>
+          </div>
+          <div class="col-lg-6">
+            <p>
+              You're passionate about what you do, and so are we.
+              You put your heart and soul into your product, and now it's time to share it with the world.
+              Don't worry, we got your back.
+            </p>
+            <p>
+              The Portland Pour is the only website dedicated to local craft distilling and craft cocktails in Oregon and the Pacific Northwest.
+              Our passion for what we do is evident in our work, not just in our art, but in our writing, recipes, and reporting.
+              We love Portland, and we love the beverages created here. Join us in our mission to bring the amazing products, places, and industry news of craft beverages in Portland to consumers, not just in Oregon, but around the world.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5 py-5">
+      <div class="row">
+        <div class="col-lg-6 align-self-center text-center order-lg-2">
+          <h1 class="display-4">Collaboration</h1>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <p>
+            We're all about raising the profile of Portland craft distilling, and your brand.
+            Sponsoring The Portland Pour means you not only value your local community and growing your brand, but you support the artists and writers working to keep the project entirely local, and free.
+            We don't accept advertising, and rely on the support of our fellow Portland companies to keep our content fresh, on point, and active.
+            We encourage you to consider a sponsorship package and collaborate with us.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 align-self-center text-center">
+            <h1 class="display-4">Content</h1>
+          </div>
+          <div class="col-lg-6">
+            <p>
+              With a large collection of recipes designed for local products, and an ever growing library of creative and editorial photography, our content is a valuable tool for your brand.
+            </p>
+            <p>
+              Sponsors of The Portland Pour have full access to our content, not only on our platform, but on yours.
+              Your sponsorship comes with unlimited license to use our pictures, stories, and recipes on your website, in your print campaigns, and across your social media.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-4 text-center">
+          <img class="imgres" src="https://www.theportlandpour.com/content/images/2019/03/taylors-ferry-cocktail.jpg" alt="Taylors Ferry cocktail">
+          <p><small class="text-muted">Taylors Ferry</small></p>
+        </div>
+        <div class="col-lg-4 text-center">
+          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/12/bunny-mother-cocktail-1.jpg" alt="Bunny Mother cocktail">
+          <p><small class="text-muted">Bunny Mother</small></p>
+        </div>
+        <div class="col-lg-4 text-center">
+          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/11/pink-lady-cocktail-6.jpg" alt="Pink Lady cocktail">
+          <p><small class="text-muted">Pink Lady</small></p>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row mb-3">
+        <div class="col-lg-12">
+          <h2 class="text-center">Much more than just a website</h2>
+          <p class="text-center">The Portland Pour is about community. We're much more than a website. Sponsors also enjoy...</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <h4 class="text-center">Workshops and classes</h4>
+          <p>
+            We offer workshops and classes on topics ranging from "how to get started with local craft cocktails at home" to "making syrups, cordials, and bitters at home" to "studio lighting for product photography" and many others.
+          </p>
+          <p>
+            Sustaining sponsors have access to all of our workshops, either as participants or hosts.
+            Want to host a workshop in your tasting room or bar?
+            No problem.
+            Just let us know when and where, and what topic you'd like to explore.
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="text-center">Creative services</h4>
+          <p>
+            The Portland Pour was designed to be a website, and a creative agency for companies big enough to have a marketing department, but not yet big enough to have a creative department in house.
+            We are your creative department.
+          </p>
+          <p>
+            We provide all manner of creative services, including product photography, content creation, custom recipe writing, in house printing, print and digital design, and technical consulting for your website and digital marketing.
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="text-center">Social reach</h4>
+          <p>
+            As marketers and artists, we cannot ignore social media.
+            Aside from our own presence on social media, we can provide guidance for your online marketing
+          </p>
+          <p>
+            Sustaining sponsors have access to our social media services, whether you need help or coaching, we're here to advise and help grown your social footprint and expand your customer base.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-4 text-center">
+          <img class="imgres" src="https://www.theportlandpour.com/content/images/2019/03/archive__webshare_001-41.jpg" alt="bourbon and chocolate">
+          <p><small class="text-muted">Bourbon and chocolate</small></p>
+        </div>
+        <div class="col-lg-4 text-center">
+          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/10/archive__webshare_001-12.jpg" alt="Spiced apple cider">
+          <p><small class="text-muted">Spiced apple cider</small></p>
+        </div>
+        <div class="col-lg-4 text-center">
+          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/11/-cocktail-5.jpg" alt="Mini bottles">
+          <p><small class="text-muted">Mini bottle samples</small></p>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row mb-3">
+        <div class="col-lg-12">
+          <h2 class="text-center">How it works</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <h4 class="text-center">Join</h4>
+          <p class="text-center text-muted"><i class="fas fa-file-signature fa-7x my-3"></i></p>
+          <p>
+            Select your sponsorship level, and fill out the form
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="text-center">Consult</h4>
+          <p class="text-center text-muted"><i class="fas fa-handshake fa-7x my-3"></i></p>
+          <p>
+            Meet and discuss your brand and marketing goals
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="text-center">Grow</h4>
+          <p class="text-center text-muted"><i class="fas fa-chart-line fa-7x my-3"></i></p>
+          <p>
+            Sit back and let us do the work for your brand
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2 class="text-center">Sponsorship levels and benfits</h2>
+        </div>
+      </div>
+    </div>
+    <a name="join" id="join" />
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <h2 class="text-center">Become a sponsor</h2>
+          <p class="text-center">Becoming a sponsor of The Portland Pour is as easy as filling out the form.</p>
+          <p class="text-center">Don't worry, you don't have to pay anything now.</p>
+          <p class="text-center">When we recieve your completed form, we'll be in touch to set up a time to discuss the program and your marketing goals, after which, we'll set up your account and billing (if any).</p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-6">
+          <form class="details" action="https://formspree.io/info@theportlandpour.com" method="post">
+            <input type="hidden" name="_subject" value="Sponsorship request" />
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" id="name" name="name">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="company">Company</label>
+              <input type="text" class="form-control" id="company">
+            </div>
+            <p>I am interested in</p>
+            <div class="form-group">
+              <input type="radio" name="type" checked="checked" value="Sustaining sposorship"> Sustaining sponsorship
+            </div>
+            <div class="form-group">
+              <input type="radio" name="type" value="Community sponsorship"> Community sponsorship
+            </div>
+            <div class="form-group">
+              <input type="radio" name="type" value="Startup sponsorship"> Startup sponsorship
+            </div>
+            <div class="form-group">
+              <input type="radio" name="type" value="Sponsoring a workshop"> Sponsoring a workshop or class
+            </div>
+            <div class="form-group">
+              <input type="radio" name="type" value="Sponsoring a post"> Sponsoring a post or product
+            </div>
+            <div class="form-group">
+              <input type="radio" name="type" value="Affiliate"> Reseller/brand ambassador opportunities
+            </div>
+            <div class="form-group">
+              <input type="radio" name="type" value="Corporate"> Corporate/enterprise opportunities
+            </div>
+            <div class="form-group">
+              <label for="message">Comments (optional)</label>
+              <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-danger">Submit</button>
+          </form>
         </div>
       </div>
     </div>
