levels and forms

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg order-lg-2">
-            <img class="imggray imgres" src="assets/images/bg.hero.png" alt="hero image">
+            <img class="imggray img-fluid" src="assets/images/bg.hero.png" alt="hero image">
           </div>
           <div class="col-lg order-lg-1 align-self-end cta">
             <h1 class="display-4">Working together</h1>
@@ -55,7 +55,7 @@
       </div>
       <div class="row  justify-content-center my-5">
         <div class="col-auto">
-          <img class="imgres" src="assets/images/screenshots.png" alt="screenshots on all devices">
+          <img class="img-fluid" src="assets/images/screenshots.png" alt="screenshots on all devices">
         </div>
       </div>
     </div>
@@ -116,15 +116,15 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-4 text-center">
-          <img class="imgres" src="https://www.theportlandpour.com/content/images/2019/03/taylors-ferry-cocktail.jpg" alt="Taylors Ferry cocktail">
+          <img class="img-fluid" src="https://www.theportlandpour.com/content/images/2019/03/taylors-ferry-cocktail.jpg" alt="Taylors Ferry cocktail">
           <p><small class="text-muted">Taylors Ferry</small></p>
         </div>
         <div class="col-lg-4 text-center">
-          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/12/bunny-mother-cocktail-1.jpg" alt="Bunny Mother cocktail">
+          <img class="img-fluid" src="https://www.theportlandpour.com/content/images/2018/12/bunny-mother-cocktail-1.jpg" alt="Bunny Mother cocktail">
           <p><small class="text-muted">Bunny Mother</small></p>
         </div>
         <div class="col-lg-4 text-center">
-          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/11/pink-lady-cocktail-6.jpg" alt="Pink Lady cocktail">
+          <img class="img-fluid" src="https://www.theportlandpour.com/content/images/2018/11/pink-lady-cocktail-6.jpg" alt="Pink Lady cocktail">
           <p><small class="text-muted">Pink Lady</small></p>
         </div>
       </div>
@@ -174,15 +174,15 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-lg-4 text-center">
-          <img class="imgres" src="https://www.theportlandpour.com/content/images/2019/03/archive__webshare_001-41.jpg" alt="bourbon and chocolate">
+          <img class="img-fluid" src="https://www.theportlandpour.com/content/images/2019/03/archive__webshare_001-41.jpg" alt="bourbon and chocolate">
           <p><small class="text-muted">Bourbon and chocolate</small></p>
         </div>
         <div class="col-lg-4 text-center">
-          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/10/archive__webshare_001-12.jpg" alt="Spiced apple cider">
+          <img class="img-fluid" src="https://www.theportlandpour.com/content/images/2018/10/archive__webshare_001-12.jpg" alt="Spiced apple cider">
           <p><small class="text-muted">Spiced apple cider</small></p>
         </div>
         <div class="col-lg-4 text-center">
-          <img class="imgres" src="https://www.theportlandpour.com/content/images/2018/11/-cocktail-5.jpg" alt="Mini bottles">
+          <img class="img-fluid" src="https://www.theportlandpour.com/content/images/2018/11/-cocktail-5.jpg" alt="Mini bottles">
           <p><small class="text-muted">Mini bottle samples</small></p>
         </div>
       </div>
@@ -218,14 +218,197 @@
       </div>
     </div>
     <div class="container my-5">
-      <div class="row">
+      <div class="row mb-3">
         <div class="col-lg-12">
           <h2 class="text-center">Sponsorship levels and benfits</h2>
+          <div class="card-deck mt-5">
+            <div class="card">
+              <div class="card-header bg-primary text-light font-weight-bold">
+                Sustaining sponsor
+              </div>
+              <div class="card-body p-0">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Type:</span> Annual
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">How many:</span> 4
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Eligibility:</span> Open to businesses in Oregon
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Cost:</span> $12000/year
+                  </li>
+                  <li class="list-group-item">
+                    <p class="font-weight-bold">Benefits</p>
+                    <p>Prominant placement of brand on The Portland Pour homepage</p>
+                    <p>A sponsor profile page with content of your choice, and listing of all recipes and posts using your product or mentioning your brand</p>
+                    <p>Minimum of two recipes per month featuring your product, created by either you or The Portland Pour</p>
+                    <p>A feature post on your company, brand, products and people</p>
+                    <p>Filtered lists of recipes and posts using your product(s) or mentioning your brand in each relevant section</p>
+                    <p>Unlimited commercial content license and access to our recipes, posts, and images</p>
+                    <p>Unlimited merchendise license to sell our goods in your shop or on your website</p>
+                    <p>Host unlimited workshops/events at your facility</p>
+                    <p>Attend all workshops at our facility for free</p>
+                    <p>Unlimited studio product/editorial photography</p>
+                    <p>Unlimited content creation</p>
+                    <p>Unlimited consultation on recipes, marketing, and/or technology</p>
+                    <p>Monthly one-on-one meeting to assess the value of your sponsorship, growth of your brand, and ongoing initiatives</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer text-center">
+                <a href="#join">
+                  <button type="button" class="btn btn-danger">Become a sustaining sponsor</button>
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header bg-primary text-light font-weight-bold">
+                Community sponsor
+              </div>
+              <div class="card-body p-0">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Type:</span> Annual
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">How many:</span> Unlimited
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Eligibility:</span> Open to anyone
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Cost:</span> $5000/year
+                  </li>
+                  <li class="list-group-item">
+                    <p class="font-weight-bold">Benefits</p>
+                    <p>Placement of brand on The Portland Pour homepage</p>
+                    <p>A section on the community profile page with content of your choice, and a link to a list of all recipes and posts using your product(s) or mentioning your brand</p>
+                    <p>A feature post on your company, brand, products and people</p>
+                    <p>Minimum of two community sponsor recipes posted each month, selected from the recommendations and requests of all community sponsors</p>
+                    <p>Unlimited commercial content license and access to our recipes, posts, and images</p>
+                    <p>Unlimited merchendise license to sell our goods in your shop or on your website</p>
+                    <p>Sponsor's discount on workshops/events at your facility</p>
+                    <p>Attend all workshops at our facility for free</p>
+                    <p>Sponsor's discount on studio product/editorial photography, and all creative services</p>
+                    <p>Unlimited consultation on recipes, marketing, and/or technology</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer text-center">
+                <a href="#join">
+                  <button type="button" class="btn btn-danger">Become a community sponsor</button>
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header bg-primary text-light font-weight-bold">
+                Startup sponsor
+              </div>
+              <div class="card-body p-0">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Type:</span> Annual
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">How many:</span> Unlimited
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Eligibility:</span> Must be a beverage startup in Oregon
+                  </li>
+                  <li class="list-group-item">
+                    <span class="font-weight-bold">Cost:</span> $2500/year
+                  </li>
+                  <li class="list-group-item">
+                    <p class="font-weight-bold">Benefits</p>
+                    <p>
+                      The startup sponsorship is designed for new companies who have not yet been granted a license, do not yet have a location or still, and are considered early stage startups.
+                    </p>
+                    <p>
+                      Startup sponsors enjoy all the benefits of sustaining sponsors, but are limited to one year as a startup sponsor.
+                    </p>
+                    <p>
+                      Starup sponsors also enjoy the additional benefit of ongoing and active reporting.
+                      We want to document your growth, and use our platform to give you the best chance of starting strong in the local beverage community.
+                    </p>
+                    <p>
+                      To find out if you qualify, fill out the form below, and let's get started growing your new business together.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-footer text-center">
+                <a href="#join">
+                  <button type="button" class="btn btn-danger">Become a startup sponsor</button>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <a name="join" id="join" />
-    <div class="container">
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-6">
+          <h4 class="text-center">How to choose</h4>
+          <p>
+            Choosing a sponsorship level depends on your marketing goals, how you want to use The Portland Pour, and if you need any of our creative services.
+            It also depends on your budget and overall return on the investment when compared to your existing marketing spend.
+          </p>
+          <p>
+            For those considering a sustaining sposorship, we recommend considering the sponsorship cost as a way to reduce the cost of both online promotion and creative support.
+            How much do you spend for online advertising and does The Portland Pour fit with your target audience?
+            How much do you spend on product photography, design, printing, or events?
+            Is eleminating or reducing those costs valuable to your brand?
+          </p>
+          <p>
+            For many, it isn't.
+            You may already have your creative covered, either in house or with existing vendors, and that's fine.
+            We have a sponsorship level for you that includes our content, workshops, and all the other stuff, but saves significant cost by limiting the benefits of sponsorship to just the features you need.
+          </p>
+          <p>
+            Or, perhaps you're not in Portland.
+            We only accept a limited number of sustaining sponsors each year, and we do require that they be in Portland or somewhere in the Pacific Northwest.
+            If that's the case, we do apollogize, but would still love your support, and invite you to consider one of our other sponsorship levels.
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <h4 class="text-center">How we choose</h4>
+          <p>
+            Community sponsorship is open to all, however, there are only a few sustaining sponsors.
+            When we consider the level of service and care we offer our sustaining sponsors, we have to limit the number we accpet each year.
+            Often, this is a difficult decision, and there are times when we get more requests than we can accommodate.
+          </p>
+          <p>
+            When selecting sustaining sponsors, we start with the order in which we recieved requests to become a sponsor, and the location of the potential sponsor.
+            We also consider the appropriateness of the brand, and whether it will be a good fit for The Portland Pour.
+            Ideally, we'll be able to accomodate a group of sustaing sponsors who's products compliment each other, and that give us a good selection of spirits and items that we can use in our art and recipes.
+          </p>
+          <p>
+            Startup sponsors are also restricted to beverage startups in Oregon.
+            We know the overwhelming cost associated with a new business, and we want you to have the best start possible.
+            However, we do ask that startups only avail themselves of this option once.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2 class="text-center">Other ways to get involved</h2>
+          <ul class="list-group list-group-horizontal justify-content-center mt-3">
+            <li class="list-group-item">Host/sponsor a workshop or event</li>
+            <li class="list-group-item">Sponsor a post or product on The Portland Pour</li>
+            <li class="list-group-item">Become a merchendise reseller</li>
+          </ul>
+          <p class="text-center mt-3">Have an idea? Contact us! Let's create a plan that works for you and your brand.</p>
+        </div>
+      </div>
+    </div>
+    <a name="join" id="join"></a>
+    <div class="container pb-5">
       <div class="row justify-content-center">
         <div class="col-lg-12">
           <h2 class="text-center">Become a sponsor</h2>
@@ -253,7 +436,7 @@
             </div>
             <p>I am interested in</p>
             <div class="form-group">
-              <input type="radio" name="type" checked="checked" value="Sustaining sposorship"> Sustaining sponsorship
+              <input type="radio" name="type" value="Sustaining sposorship"> Sustaining sponsorship
             </div>
             <div class="form-group">
               <input type="radio" name="type" value="Community sponsorship"> Community sponsorship
@@ -277,7 +460,7 @@
               <label for="message">Comments (optional)</label>
               <textarea class="form-control" id="message" name="message" rows="3"></textarea>
             </div>
-            <button type="submit" class="btn btn-danger">Submit</button>
+            <button type="submit" class="btn btn-danger mb-5">Submit</button>
           </form>
         </div>
       </div>
